fix binpacking and folder

--- a/src/Components/RightCard/rightcard.css
+++ b/src/Components/RightCard/rightcard.css
@@ -48,6 +48,7 @@
     background-color: #2c2f33;
     border-radius: 8px;
     padding: 15px;
+    margin: 15px 0px 15px 0px;
 }
 
 .row {
@@ -112,11 +113,21 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 .btn-delete {
     background-color: transparent;
-    border: none;
+    border: 1px solid red;
+    opacity: 0.9;
+    border-radius: 10px;
     cursor: pointer;
+    margin-top: 30px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
 }
 
 .btn-delete img {
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
+    opacity: 0.9;
+
 }
