--- a/src/Components/RightCard/rightcard.css
+++ b/src/Components/RightCard/rightcard.css
@@ -5,14 +5,16 @@
     gap: 20px;
     width: 100%;
     margin: 0 auto;
+    max-height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .card {
     background-color: #2d2f36;
     border-radius: 8px;
-    padding: 20px;
-    margin-bottom: 20px;
     width: 100%;
+    max-height: 100vh;
 }
 
 .card-package,
@@ -36,7 +38,7 @@
 }
 
 .btn-add {
-    background-color: #007bff;
+    background-color: #0c68cb;
     color: #ffffff;
     border: none;
     padding: 10px 20px;
@@ -86,6 +88,7 @@
 .label {
     color: #ffffff;
     font-size: 14px;
+    font-weight: 600;
 }
 
 .input-group {
