--- a/src/pages/binpacking/binpacking.css
+++ b/src/pages/binpacking/binpacking.css
@@ -6,7 +6,7 @@
     display: flex;
     /* align-items: center; */
     gap: 50px;
-    overflow: hidden;
+    overflow-y: hidden;
 }
 .leftcard{
     float:left;
@@ -18,7 +18,7 @@
 }
 .rightcard{
     float:left;
-    height: 100vh;
+    max-height: 100vh;
     width: 40%;
     display: flex;
     flex-direction: column;
