build resize grid, align center grid and align box on ground

--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -105,6 +105,4 @@
   .navbar .nav-links li a:hover {
     color: #00ADB5;
   }
-}
-
-/*# sourceMappingURL=navbar.css.map */
+}/*# sourceMappingURL=navbar.css.map */
