--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,4 +1,5 @@
 .footer {
+  height: -moz-fit-content;
   height: fit-content;
   display: flex;
   flex-direction: column;
@@ -22,6 +23,4 @@
 .footer p, .footer h3 {
   color: #fff;
   line-height: 2.5;
-}
-
-/*# sourceMappingURL=footer.css.map */
+}/*# sourceMappingURL=footer.css.map */
