--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -11,6 +11,4 @@
   top: 50%;
   left: 50%;
   transform: translateX(-50%);
-}
-
-/*# sourceMappingURL=home.css.map */
+}/*# sourceMappingURL=home.css.map */
