sua navbar: them gach chan vao the a khi hover, active

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -32,47 +32,78 @@
 
     li {
       margin: 0 2rem;
+      position: relative; 
 
       a {
         color: #FFFFFF;
         text-decoration: none;
         line-height: 56px;
         padding: 0 8px;
-        
-        &:hover {
-          text-decoration: none;
+        position: relative; 
+
+        &:hover::after,
+        &.active::after {
+          content: '';
+          position: absolute;
+          bottom: -8px; 
+          left: 50%; 
+          transform: translateX(-50%);
+          width: 80%;
+          border-radius: 8px;
+          border-bottom: 4px solid #FFFFFF; 
         }
       }
 
-      &.active {
-        background-color: orange;
-
-        a {
-          color: #FFFFFF;
-        }
+      &.active a::after {
+        content: '';
+        position: absolute;
+        bottom: -8px;
+        left: 50%; 
+        transform: translateX(-50%);
+        border-radius: 8px;
+        width: 80%; 
+        border-bottom: 4px solid #FFFFFF; 
       }
     }
   }
 
   .login {
-      text-decoration: none;
-      color: #FFFFFF;
-  } 
-
-  li{
     text-decoration: none;
-    line-height: 56px;
+    color: #FFFFFF;
+  }
+
+  li {
+    margin: 0 2rem;
+    position: relative; 
     list-style-type: none;
 
-    a{
+    a {
+      color: #FFFFFF;
+      text-decoration: none;
+      line-height: 56px;
       padding: 0 8px;
-    }
-    &.active {
-      background-color: orange;
+      position: relative; 
 
-      a {
-        color: #FFFFFF;
+      &:hover::after,
+      &.active::after {
+        content: '';
+        position: absolute;
+        bottom: -8px; 
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+        border-bottom: 4px solid #FFFFFF; 
       }
+    }
+
+    &.active a::after {
+      content: '';
+      position: absolute;
+      bottom: -8px; 
+      left: 50%; 
+      transform: translateX(-50%);
+      width: 80%;
+      border-bottom: 4px solid #FFFFFF; 
     }
   }
 
@@ -119,8 +150,15 @@
           font-size: 16px;
           transition: color 0.3s;
 
-          &:hover {
-            color: #00ADB5;
+          &:hover::after,
+          &.active::after {
+            content: '';
+            position: absolute;
+            bottom: -8px; 
+            left: 50%; 
+            transform: translateX(-50%);
+            width: 90%;
+            border-bottom: 4px solid #FFFFFF; 
           }
         }
       }
