--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -30,39 +30,68 @@
 }
 .navbar .nav-links li {
   margin: 0 2rem;
+  position: relative;
 }
 .navbar .nav-links li a {
   color: #FFFFFF;
   text-decoration: none;
   line-height: 56px;
   padding: 0 8px;
+  position: relative;
 }
-.navbar .nav-links li a:hover {
-  text-decoration: none;
+.navbar .nav-links li a:hover::after, .navbar .nav-links li a.active::after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  border-radius: 8px;
+  border-bottom: 4px solid #FFFFFF;
 }
-.navbar .nav-links li.active {
-  background-color: orange;
-}
-.navbar .nav-links li.active a {
-  color: #FFFFFF;
+.navbar .nav-links li.active a::after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 8px;
+  width: 80%;
+  border-bottom: 4px solid #FFFFFF;
 }
 .navbar .login {
   text-decoration: none;
   color: #FFFFFF;
 }
 .navbar li {
-  text-decoration: none;
-  line-height: 56px;
+  margin: 0 2rem;
+  position: relative;
   list-style-type: none;
 }
 .navbar li a {
-  padding: 0 8px;
-}
-.navbar li.active {
-  background-color: orange;
-}
-.navbar li.active a {
   color: #FFFFFF;
+  text-decoration: none;
+  line-height: 56px;
+  padding: 0 8px;
+  position: relative;
+}
+.navbar li a:hover::after, .navbar li a.active::after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  border-bottom: 4px solid #FFFFFF;
+}
+.navbar li.active a::after {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  border-bottom: 4px solid #FFFFFF;
 }
 .navbar .menu-icon {
   display: none;
@@ -102,7 +131,15 @@
     font-size: 16px;
     transition: color 0.3s;
   }
-  .navbar .nav-links li a:hover {
-    color: #00ADB5;
+  .navbar .nav-links li a:hover::after, .navbar .nav-links li a.active::after {
+    content: "";
+    position: absolute;
+    bottom: -8px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    border-bottom: 4px solid #FFFFFF;
   }
-}/*# sourceMappingURL=navbar.css.map */
+}
+
+/*# sourceMappingURL=navbar.css.map */
