--- a/src/pages/booking/booking.scss
+++ b/src/pages/booking/booking.scss
@@ -18,6 +18,7 @@
             align-items: center;
             padding: 8px 12px;
             border-radius: 12px;
+            border-width: 0;
         }
 
         a{
@@ -82,6 +83,7 @@
                         align-items: center;
                         padding: 2px 8px;
                         border-radius: 12px;
+                        border-width: 0;
                     }
                 }
             }
