--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -10,16 +10,19 @@
   top: 0;
   z-index: 1000;
 }
+
 .navbar .logo {
   display: flex;
   justify-content: center;
 }
+
 .navbar .logo a {
   color: #FFFFFF;
   text-decoration: none;
   font-size: 18px;
   font-weight: bold;
 }
+
 .navbar .nav-links {
   display: flex;
   list-style-type: none;
@@ -28,10 +31,12 @@
   justify-content: space-between;
   height: 100%;
 }
+
 .navbar .nav-links li {
   margin: 0 2rem;
   position: relative;
 }
+
 .navbar .nav-links li a {
   color: #FFFFFF;
   text-decoration: none;
@@ -39,7 +44,9 @@
   padding: 0 8px;
   position: relative;
 }
-.navbar .nav-links li a:hover::after, .navbar .nav-links li a.active::after {
+
+.navbar .nav-links li a:hover::after,
+.navbar .nav-links li a.active::after {
   content: "";
   position: absolute;
   bottom: -8px;
@@ -49,6 +56,7 @@
   border-radius: 8px;
   border-bottom: 4px solid #FFFFFF;
 }
+
 .navbar .nav-links li.active a::after {
   content: "";
   position: absolute;
@@ -59,15 +67,18 @@
   width: 80%;
   border-bottom: 4px solid #FFFFFF;
 }
+
 .navbar .login {
   text-decoration: none;
   color: #FFFFFF;
 }
+
 .navbar li {
   margin: 0 2rem;
   position: relative;
   list-style-type: none;
 }
+
 .navbar li a {
   color: #FFFFFF;
   text-decoration: none;
@@ -75,7 +86,9 @@
   padding: 0 8px;
   position: relative;
 }
-.navbar li a:hover::after, .navbar li a.active::after {
+
+.navbar li a:hover::after,
+.navbar li a.active::after {
   content: "";
   position: absolute;
   bottom: -8px;
@@ -84,6 +97,7 @@
   width: 80%;
   border-bottom: 4px solid #FFFFFF;
 }
+
 .navbar li.active a::after {
   content: "";
   position: absolute;
@@ -93,45 +107,60 @@
   width: 80%;
   border-bottom: 4px solid #FFFFFF;
 }
+
 .navbar .menu-icon {
   display: none;
 }
+
 .navbar .menu-icon img {
   font-size: 24px;
   color: #FFFFFF;
   cursor: pointer;
 }
+
 @media (max-width: 768px) {
   .navbar .menu-icon {
     display: block;
+    right: 0;
+    position: absolute;
+    margin-right: 64px;
   }
+
   .navbar .login {
     display: none;
   }
+
   .navbar .nav-links {
     display: none;
     flex-direction: column;
-    position: absolute;
+    position: fixed;
     top: 56px;
     left: 0;
     width: 100%;
+    height: auto;
     background-color: #1E1E2C;
     padding: 10px 0;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    align-items: center;
   }
+
   .navbar .nav-links.active {
     display: flex;
   }
+
   .navbar .nav-links li {
     margin: 10px;
   }
+
   .navbar .nav-links li a {
     color: #FFFFFF;
     text-decoration: none;
     font-size: 16px;
     transition: color 0.3s;
   }
-  .navbar .nav-links li a:hover::after, .navbar .nav-links li a.active::after {
+
+  .navbar .nav-links li a:hover::after,
+  .navbar .nav-links li a.active::after {
     content: "";
     position: absolute;
     bottom: -8px;
@@ -141,5 +170,18 @@
     border-bottom: 4px solid #FFFFFF;
   }
 }
-
+.login-success{
+  display: flex;
+}
+.profileName-user{
+  color: white;
+  display: flex;
+  align-items: center;
+}
+.login-success .dot-login{
+  color: white;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+}
 /*# sourceMappingURL=navbar.css.map */
