--- a/src/pages/booking/booking.css
+++ b/src/pages/booking/booking.css
@@ -18,26 +18,30 @@
   padding: 8px 12px;
   border-radius: 12px;
   border-width: 0;
+  cursor: pointer;
 }
 .booking .booking_add_button a {
   text-decoration: none;
   font-size: 12px;
 }
 .booking .booking_table .booking_table_stt {
-  width: 10%;
+  width: 5%;
   text-align: center;
 }
 .booking .booking_table .booking_table_email {
   width: 20%;
 }
 .booking .booking_table .booking_table_sodienthoai {
-  width: 20%;
+  width: 15%;
 }
 .booking .booking_table .booking_table_hovaten {
   width: 20%;
 }
 .booking .booking_table .booking_table_fileexcel {
-  width: 20%;
+  width: 15%;
+}
+.booking .booking_table .booking_table_delivery {
+  width: 15%;
 }
 .booking .booking_table .booking_table_sua {
   width: 5%;
@@ -70,6 +74,7 @@
   padding: 2px 8px;
   border-radius: 12px;
   border-width: 0;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=booking.css.map */
