--- a/src/pages/product/product.scss
+++ b/src/pages/product/product.scss
@@ -10,16 +10,69 @@
         padding: 1rem;
     }
 
+    .container_tittle{
+        p{
+            color: #fff;
+            font-weight: bold;
+        }
+    }
+
+    .search_and_filter_product_container{
+        background-color: #1E1E2C;
+        padding: 1rem;
+        border-radius: 12px;
+        margin-bottom: 1rem;
+        .search_and_filter_product_wrapper{
+            display: flex;
+            padding: 1rem;
+            justify-content: space-between;
+            .search_product_container{
+                width: 45%;
+                input{
+                    width: 80%;
+                    padding: 4px;
+                    border-radius: 12px;
+                    border-width: 0;
+                }
+                button{
+                    width: 15%;
+                    padding: 4px;
+                    border-radius: 12px;
+                    border-width: 0;
+                    margin-left: 1%;
+                }
+                
+            }
+            .filter_product_container{
+                position: relative;
+                width: 40%;
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                p{
+                    color: #fff;
+                    font-size: 16px;
+                }
+                button{
+                    width: 30%;
+                    padding: 4px;
+                    border-radius: 12px;
+                    border-width: 0;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    img{
+                        width: 16px;
+                    }
+                }
+            }
+        }
+    }
+
     .products_container{
         background-color: #1E1E2C;
         padding: 1rem;
         border-radius: 12px;
-        .products_container_tittle{
-            p{
-                color: #fff;
-                font-weight: bold;
-            }
-        }
 
         hr{
             margin: 1rem 0;
@@ -32,28 +85,44 @@
                 width: 15%;
             }
             .products_table_name{
-                width: 25%;
+                width: 15%;
             }
             .products_table_type{
-                width: 15%;
+                width: 10%;
             }
             .products_table_quantity{
-                width: 15%;
+                width: 10%;
             }
             .products_table_checkin{
-                width: 15%;
+                width: 10%;
             }
             .products_table_checkout{
-                width: 15%;
+                width: 10%;
+            }
+            .products_table_STT{
+                width: 5%;
+            }
+            .products_table_location{
+                width: 12.5%;
+            }
+            .products_table_shelfName{
+                width: 12.5%;
             }
             .products_table_header{
                 display: flex;
                 justify-content: space-between;
                 padding: 1rem;
-                P{
+                p{
                     color: #fff;
                     font-weight: bold;
                     font-size: 14px;
+                    text-align: center;
+                }
+                .products_table_name,
+                .products_table_type{
+                    p{
+                        text-align: left;
+                    }
                 }
             }
             .products_table_item{
@@ -68,6 +137,18 @@
                     color: #fff;
                     font-weight: bold;
                     font-size: 13px;
+                    text-align: center;
+                }
+                .products_table_picture{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                .products_table_name,
+                .products_table_type{
+                    p{
+                        text-align: left;
+                    }
                 }
             }
         }
