--- a/src/pages/booking/booking.scss
+++ b/src/pages/booking/booking.scss
@@ -12,7 +12,7 @@
 
     .booking_add_button{
         padding: 1rem 0;
-
+        display: flex;
         .add_button_container{
             display: flex;
             align-items: center;
@@ -20,16 +20,26 @@
             border-radius: 12px;
             border-width: 0;
             cursor: pointer;
+            p{
+                font-size: 14px;
+            }
+            img{
+                margin-left: 4px;
+            }
+        }
+
+        .btn_create_file{
+            margin-left: 1rem;
         }
 
         a{
             text-decoration: none;
-            font-size: 12px;
+            font-size: 14px;
+            color: #000;
         }
     }
 
     .booking_table{
-
         .booking_table_stt{
             width: 5%;
             text-align: center;
@@ -57,6 +67,7 @@
         }
 
         .booking_table_title{
+            border-radius: 12px 12px 0px 0px;
             background-color: #312E4A;
             color: #fff;
             display: flex;
@@ -71,7 +82,6 @@
         }
 
         .booking_table_items{
-
             .booking_table_item{
                 background-color: #3C3A54;
                 color: #fff;
@@ -79,7 +89,6 @@
                 justify-content: space-around;
                 height: 50px;
                 align-items: center;
-
                 .booking_table_sua, .booking_table_xoa{
 
                     button{
@@ -92,6 +101,9 @@
                     }
                 }
             }
+            .booking_table_item:last-child{
+                border-radius: 0px 0px 12px 12px;
+            }   
         }
     }
 }
