--- a/src/Components/RightCard/rightcard.css
+++ b/src/Components/RightCard/rightcard.css
@@ -44,8 +44,17 @@
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-}
+    margin: 0px 10px;
 
+}
+.btn-add-excel{
+    background-color: #0c68cb;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
 .package-body {
     background-color: #2c2f33;
     border-radius: 8px;
