--- a/src/Components/RightCard/rightcard.css
+++ b/src/Components/RightCard/rightcard.css
@@ -109,6 +109,14 @@
     margin-top: 30px;
     border-radius: 50%;
 }
+.color-item {
+    background: rgb(255, 255, 255);
+    width: 1rem;
+    height: 1rem;
+    min-width: 1rem;
+    margin-top: 30px;
+    border-radius: 50%;
+}
 .label-package {
     display: flex;
     margin-bottom: 10px;
