--- a/src/pages/booking/booking.css
+++ b/src/pages/booking/booking.css
@@ -39,6 +39,7 @@
 }
 .booking .booking_add_button .form_create_new_booking {
   padding: 1rem;
+  width: 600px;
   background-color: #ccc;
   border-radius: 12px;
   position: absolute;
@@ -61,11 +62,17 @@
 .booking .booking_add_button .form_create_new_booking #close_form_create_new_booking p {
   font-size: 14px;
 }
+.booking .booking_add_button .form_create_new_booking .title_form_create_new_booking {
+  font-weight: bold;
+  text-align: center;
+}
 .booking .booking_add_button .form_create_new_booking form {
   padding: 1rem;
+  height: 400px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 .booking .booking_add_button .form_create_new_booking form p {
   margin-bottom: 0.3rem;
@@ -73,15 +80,10 @@
 .booking .booking_add_button .form_create_new_booking form input {
   margin-bottom: 1rem;
 }
-.booking .booking_add_button .form_create_new_booking form .title_form_create_new_booking {
-  font-weight: bold;
-  text-align: center;
-}
 .booking .booking_add_button .form_create_new_booking form #btn_submit_form_create_new_booking {
   width: fit-content;
   padding: 4px;
-  margin-left: 50%;
-  transform: translateX(-50%);
+  margin-top: 1rem;
 }
 .booking .booking_add_button a {
   text-decoration: none;
@@ -93,19 +95,28 @@
   text-align: center;
 }
 .booking .booking_table .booking_table_email {
-  width: 20%;
+  width: 12%;
 }
 .booking .booking_table .booking_table_sodienthoai {
-  width: 15%;
+  width: 10%;
 }
 .booking .booking_table .booking_table_hovaten {
-  width: 20%;
+  width: 15%;
 }
 .booking .booking_table .booking_table_fileexcel {
-  width: 15%;
+  width: 10%;
 }
 .booking .booking_table .booking_table_delivery {
-  width: 15%;
+  width: 10%;
+}
+.booking .booking_table .booking_table_status {
+  width: 9%;
+}
+.booking .booking_table .booking_table_checkin {
+  width: 9%;
+}
+.booking .booking_table .booking_table_checkout {
+  width: 10%;
 }
 .booking .booking_table .booking_table_sua {
   width: 5%;
@@ -133,10 +144,13 @@
   height: 50px;
   align-items: center;
 }
+.booking .booking_table .booking_table_items .booking_table_item p {
+  font-size: 14px;
+}
 .booking .booking_table .booking_table_items .booking_table_item .booking_table_sua button, .booking .booking_table .booking_table_items .booking_table_item .booking_table_xoa button {
   display: flex;
   align-items: center;
-  padding: 2px 8px;
+  padding: 4px 8px;
   border-radius: 12px;
   border-width: 0;
   cursor: pointer;
