--- a/src/pages/booking/booking.scss
+++ b/src/pages/booking/booking.scss
@@ -40,6 +40,7 @@
         }
         .form_create_new_booking{
             padding: 1rem;
+            width: 600px;
             background-color: #ccc;
             border-radius: 12px;
             position: absolute;
@@ -61,27 +62,27 @@
                     font-size: 14px;
                 }
             }
-
+            .title_form_create_new_booking{
+                font-weight: bold;
+                text-align: center;
+            }
             form{
                 padding: 1rem;
+                height: 400px;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                justify-content: flex-start;
+                flex-wrap: wrap;
                 p{
                     margin-bottom: .3rem;
                 }
                 input{
                     margin-bottom: 1rem;
                 }
-                .title_form_create_new_booking{
-                    font-weight: bold;
-                    text-align: center;
-                }
                 #btn_submit_form_create_new_booking{
                     width: fit-content;
                     padding: 4px;
-                    margin-left: 50%;
-                    transform: translateX(-50%);
+                    margin-top: 1rem;
                 }
 
             }
@@ -100,19 +101,28 @@
             text-align: center;
         }
         .booking_table_email{
-            width: 20%;
+            width: 12%;
         }
         .booking_table_sodienthoai{
-            width: 15%;
+            width: 10%;
         }
         .booking_table_hovaten{
-            width: 20%;
+            width: 15%;
         }
         .booking_table_fileexcel{
-            width: 15%;
+            width: 10%;
         }
         .booking_table_delivery{
-            width: 15%;
+            width: 10%;
+        }
+        .booking_table_status{
+            width: 9%;
+        }
+        .booking_table_checkin{
+            width: 9%;
+        }
+        .booking_table_checkout{
+            width: 10%;
         }
         .booking_table_sua{
             width: 5%;
@@ -144,12 +154,15 @@
                 justify-content: space-around;
                 height: 50px;
                 align-items: center;
+                p{
+                    font-size: 14px;
+                }
                 .booking_table_sua, .booking_table_xoa{
 
                     button{
                         display: flex;
                         align-items: center;
-                        padding: 2px 8px;
+                        padding: 4px 8px;
                         border-radius: 12px;
                         border-width: 0;
                         cursor: pointer;
